[package]
name = "orca"
version = "0.1.0"
authors = ["Lukasz Kurowski <crackcomm@gmail.com>"]
build = "orca/build.rs"

[lib]
path = "orca/lib.rs"
doctest = false

[[example]]
name = "poloniex-stream"
path = "examples/poloniex-stream.rs"
doc = false

[features]
default-features = []
proto3 = []
with-bytes = ["bytes", "protobuf/with-bytes"]

[build-dependencies]
protoc      = "1.4"
protoc-rust = "1.4"
glob        = "0.2"
env_logger  = "0.*"

[dependencies]
log           = "0.3"
futures       = "0.1"
protobuf      = "1.4"
websocket     = "0.20"
serde_json    = "1.0"
tokio-core    = "0.1"
error-chain   = "0.11"
ordered-float = "0.5"
multiqueue    = "0.3"
env_logger    = "0.4"
sled          = "0.14"

[dependencies.bytes]
version = "0.*"
optional = true
