[package]
name = "orca_command"
version = "0.1.0"
authors = ["crackcomm <crackcomm@gmail.com>"]

[[bin]]
name = "orca"
path = "bin/main.rs"

[dependencies]
orca_currency = { path = "../currency" }
orca_markets = { path = "../markets" }
orca_clients = { path = "../clients" }
orca_trades = { path = "../trades" }
orca_history = { path = "../history" }

pretty_env_logger = "*"

toml = "*"
serde = "1.0"
serde_json = "*"
serde_derive = "1.0"

hyper = { git = "https://github.com/hyperium/hyper.git" }
hyper-tls = { git = "https://github.com/hyperium/hyper-tls.git" }


chrono = "*"
futures = "*"

log = "0.3"

tokio-io = "*"
tokio-core = "*"
tokio-timer = { git = "https://github.com/tokio-rs/tokio-timer.git" }
tokio-signal = { git = "https://github.com/alexcrichton/tokio-signal.git" }

getopts = "*"
