[package]
name = "orca_history"
version = "0.1.0"
authors = ["crackcomm <crackcomm@gmail.com>"]

[dependencies]
orca_currency = { path = "../currency" }
orca_markets = { path = "../markets" }
orca_clients = { path = "../clients" }
orca_trades = { path = "../trades" }

log = "*"

hyper = { git = "https://github.com/hyperium/hyper.git" }
hyper-tls = { git = "https://github.com/hyperium/hyper-tls.git" }

chrono = "*"
futures = "*"
