[package]
name = "orca"
version = "0.1.0"
authors = ["Lukasz Kurowski <crackcomm@gmail.com>"]
build = "build.rs"

[lib]
path = "core/lib.rs"
doctest = false

[features]
default-features = []
proto3 = []
with-bytes = ["bytes", "protobuf/with-bytes"]

[build-dependencies]
protoc      = "1.4"
protoc-rust = "1.4"
glob        = "0.2"
log         = "0.*"
env_logger  = "0.*"

[dependencies]
protobuf = "1.4"

[dependencies.bytes]
version = "0.*"
optional = true
