[package]
name = "orca_trades"
version = "0.1.0"
authors = ["crackcomm <crackcomm@gmail.com>"]

[dependencies]
orca_markets = { path = "../markets" }
orca_currency = { path = "../currency" }

log = "*"
chrono = "*"
ordered-float = "*"

# Parallelistation of serialization
rayon = "0.7.0" # { git = "https://github.com/nikomatsakis/rayon.git" }

lmdb-rs = "*"
getopts  = "*"
serde = "*"
serde_json = "*"

[[bin]]
name = "trades_export"
path = "bin/trades_export/main.rs"

[[bin]]
name = "iter"
path = "bin/iter/main.rs"

